--- a/server/src/index.html
+++ b/server/src/index.html
@@ -6,30 +6,30 @@
     <meta name="viewport" content="width=device-width, maximum-scale=1">
 
     <title>Garducci Detail</title>
-    <link rel="icon" href="favicon.png" type="image/png">
-    <link rel="shortcut icon" href="logo.png" type="img/x-icon">
+    <link rel="icon" href="static/img/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="static/img/logo.png" type="static/img/x-icon">
 
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600'
         rel='stylesheet' type='text/css'>
 
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="css/font-awesome.css" rel="stylesheet" type="text/css">
-    <link href="css/responsive.css" rel="stylesheet" type="text/css">
-    <link href="css/animate.css" rel="stylesheet" type="text/css">
+    <link href="static/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="static/css/style.css" rel="stylesheet" type="text/css">
+    <link href="static/css/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="static/css/responsive.css" rel="stylesheet" type="text/css">
+    <link href="static/css/animate.css" rel="stylesheet" type="text/css">
 
     <!--[if IE]><style type="text/css">.pie {behavior:url(PIE.htc);}</style><![endif]-->
 
-    <script type="text/javascript" src="js/jquery.1.8.3.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="js/jquery-scrolltofixed.js"></script>
-    <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="js/jquery.isotope.js"></script>
-    <script type="text/javascript" src="js/wow.js"></script>
-    <script type="text/javascript" src="js/classie.js"></script>
-    <script type="text/javascript" src="js/jquery.mask.min.js"></script>
-    <script src="js/main.js"></script>
+    <script type="text/javascript" src="static/js/jquery.1.8.3.min.js"></script>
+    <script type="text/javascript" src="static/js/bootstrap.js"></script>
+    <script type="text/javascript" src="static/js/jquery-scrolltofixed.js"></script>
+    <script type="text/javascript" src="static/js/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="static/js/jquery.isotope.js"></script>
+    <script type="text/javascript" src="static/js/wow.js"></script>
+    <script type="text/javascript" src="static/js/classie.js"></script>
+    <script type="text/javascript" src="static/js/jquery.mask.min.js"></script>
+    <script src="static/js/main.js"></script>
 
 
     <!--[if lt IE 9]>
@@ -48,7 +48,7 @@
             <div class="container">
                 <figure class="logo animated fadeInDown delay-07s">
                     <a href="#header">
-                        <img src="img/logo.png" alt="main logo">
+                        <img src="static/img/logo.png" alt="main logo">
                     </a>
                 </figure>
                 <h1 class="animated fadeInDown delay-07s">Bem Vindo ao Garducci Detail</h1>
@@ -73,7 +73,7 @@
                 </li>
                 <li class="small-logo">
                     <a href="#header">
-                        <img src="img/small-logo.png" alt="">
+                        <img src="static/img/small-logo.png" alt="">
                     </a>
                 </li>
                 <li>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <figure class="col-lg-7 col-sm-6  text-right wow fadeInUp delay-02s">
-                    <img src="img/white-car.jpg" alt="cleaning-white-car">
+                    <img src="static/img/white-car.jpg" alt="cleaning-white-car">
                 </figure>
 
             </div>
@@ -127,31 +127,33 @@
         <div class="container">
             <div class="row">
                 <figure class="col-lg-5 col-sm-4 wow fadeInLeft">
-                    <img src="img/camaro.jpg" alt="car-camaro">
+                    <img src="static/img/camaro.jpg" alt="car-camaro">
                 </figure>
                 <div class="col-lg-7 col-sm-8 featured-work">
                     <div class="featured-box-col2 wow fadeInRight delay-02s">
                         <h3>Quer deixar impecável somente na parte Exterior?</h3>
-                        <strong>
-                            <p>Não tem problemas, escolhendo somente o exterior seu automóvel receberá todo o cuidado também.
-                                Nesta opção iremos fazer:</p>
-                        </strong>
-                        <br>
+                        <p>Temos desde uma lavagem simples a mais completa. 
+                            Na <strong>lavagem simples</strong>, temos:</p>
                         <ul>
                             <li>Uma pré-lavagem com banho de espuma</li>
                             <li>Lavagem manual do veículo</li>
                             <li>Descontaminação da pintura</li>
                             <li>Lavagem e condicionamento das caixas de roda</li>
-                            <li>No exterior e interior das rodas, faremos um polimento e selagem</li>
                             <li>Polimento e selagem das lanternas e faróis</li>
+                        </ul>
+                        <p>Só com essa lavagem simples o carro já vai estar com outra cara,
+                            mas caso queira um capricho a mais, aqui vai a <strong>lavagem completa:</strong>
+                        </p>
+                        <ul>
+                            <li>Todos os itens da lavagem simples</li>
+                            <li>No exterior e interior das rodas, faremos um polimento e selagem</li>
                             <li>Polimento dos metais e cromados</li>
-                            <li>A pintura receberá um tratamento especializado, de acordo com a necessidade, terá um número de
-                                fases adequados, sendo feito o corte, polimento e lustro</li>
+                            <li>A pintura receberá um tratamento especializado, de acordo com a necessidade, 
+                                terá um número de fases adequados, sendo feito o corte, polimento e lustro</li>
                             <li>Limpeza e selagem dos vidros</li>
                             <li>Condicionamento de borrachas e plásticos</li>
-                            <li>Para proteger sua pintura após todo o tratamento, será passado uma proteção com cera ou selante
-                                ou revestimento de vidro.</li>
-                            <br />
+                            <li>Para proteger sua pintura após todo o tratamento, 
+                                será passado uma proteção com cera ou selante ou revestimento de vidro.</li>
                         </ul>
                     </div>
                     <a class="Learn-More" href="#">Learn More</a>
@@ -169,20 +171,23 @@
                     <div class="service-list">
                         <div class="service-list-col2">
                             <h3>Sinta-se em um carro que acabou de sair da fábrica, peça uma limpeza no Interior.</h3>
-                            <ul>
-                                <li>Aspiração de todo o interior do automóvel</li>
-                                <li>Limpeza nas dobradiças e guarnições das portas</li>
-                                <li>Se você tem banco de couro, não se preocupe, fazemos a limpeza e condicionamento deles</li>
-                                <li>Limpeza no forro do teto, ele voltará a ter a cor de fábrica</li>
-                                <li>Seu painel de instrumentos ficará impecável</li>
-                                <li>Todos os plásticos e borrachas do veículo serão limpados</li>
-                                <li>Os vidros também receberam a limpeza que merecem.</li>
-                            </ul>
+                            <p>Para que você sinta aquele cheiro de novo no carro, nós fazemos uma aspiração no
+                                interior do veículo, limpeza nas dobradiças e guarnições das portas.
+                            </p>
+                            <br />
+                            <p>Se você tem banco de couro, não se preocupe, fazemos a limpeza e condicionamento deles,
+                                seu forro do teto voltará a ter a cor de fábrica, e seu painel de instrumentos ficará impecável.
+                            </p>
+                            <br />
+                            <p>    
+                                Todos os plásticos e borrachas do veículo serão limpados junto
+                                com os vidros do automóvel.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-                    <img src="img/porshe_intern.jpeg" alt="intern-of-porshe">
+                    <img src="static/img/porshe_intern.jpeg" alt="intern-of-porshe">
                 </figure>
 
             </div>
@@ -217,39 +222,39 @@
         </div>
         <div class="portfolioContainer wow fadeInUp delay-04s">
             <div class=" Portfolio-box store">
-                <img src="img/front-store.jpg" alt="front-of-store">
+                <img src="static/img/front-store.jpg" alt="front-of-store">
             </div>
             <div class="Portfolio-box store">
-                <img src="img/store02.jpg" alt="store-intern">
+                <img src="static/img/store02.jpg" alt="store-intern">
                 <h3>A Oficina</h3>
                 <p>Muito trabalho e cuidado.</p>
             </div>
             <div class=" Portfolio-box cars">
-                <img src="img/mustang.jpg" alt="car-mustang">
+                <img src="static/img/mustang.jpg" alt="car-mustang">
             </div>
 
             <div class=" Portfolio-box moto">
-                <img src="img/moto.jpg" alt="moto-kawasaki">
+                <img src="static/img/moto.jpg" alt="moto-kawasaki">
             </div>
             <div class=" Portfolio-box cars">
-                <img src="img/windows-cleanup.jpg" alt="car-cleanUp-windows">
+                <img src="static/img/windows-cleanup.jpg" alt="car-cleanUp-windows">
                 <h3>Os Carros</h3>
                 <p>Limpeza com eficiência.</p>
             </div>
             <div class=" Portfolio-box moto">
-                <img src="img/moto-engine.jpg" alt="moto-engine">
+                <img src="static/img/moto-engine.jpg" alt="moto-engine">
             </div>
 
             <div class=" Portfolio-box cars">
-                <img src="img/fusca04.jpg" alt="car-fusca">
+                <img src="static/img/fusca04.jpg" alt="car-fusca">
             </div>
             <div class=" Portfolio-box moto">
-                <img src="img/moto05.jpg" alt="">
+                <img src="static/img/moto05.jpg" alt="">
                 <h3>As motos</h3>
                 <p>Tratamento profissional.</p>
             </div>
             <div class=" Portfolio-box cars">
-                <img src="img/car-intern.jpg" alt="washing-intern-of-car">
+                <img src="static/img/car-intern.jpg" alt="washing-intern-of-car">
             </div>
         </div>
     </section>
@@ -351,7 +356,7 @@
         <div class="container">
             <div class="footer-logo">
                 <a href="#header">
-                    <img src="img/logo.png" alt="logo-image">
+                    <img src="static/img/logo.png" alt="logo-image">
                 </a>
             </div>
             <span class="copyright">Copyright © 2017 | Desenvolvido por Marcus Garducci.</span>
