Translated texts and add new texts

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Knight - v4.3.0
@@ -91,9 +92,9 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav> -->
-      <!-- .navbar -->
+  <!-- .navbar -->
 
-    <!-- </div>
+  <!-- </div>
   </header> -->
   <!-- End Header -->
 
@@ -116,16 +117,17 @@
           </div>
           <div class="col-lg-6" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0 pl-0 pl-lg-3 ">
-              <h3>Nessa promoção em <strong class="yellow-letter">01 a 02 HORAS você já repõe seu investimento.</strong> Com 01 serviço você já tem lucro e coloca dinheiro no bolso.</h3>
+              <h3>Nessa promoção em <strong class="yellow-letter">01 a 02 HORAS você já repõe seu investimento.</strong>
+                Com 01 serviço você já tem lucro e coloca dinheiro no bolso.</h3>
               <p class="fst-italic">
-               Veja algumas das vantagens de obter o curso
+                Veja algumas das vantagens de obter o curso
               </p>
               <ul>
-                <li><i class="bx bx-check-double"></i> Curso Didático</li>
+                <li><i class="bx bx-check-double"></i> Curso didático</li>
                 <li><i class="bx bx-check-double"></i> Certificado após a conclusão</li>
                 <li><i class="bx bx-check-double"></i> Tire suas dúvidas diretamente com o professor</li>
               </ul>
-            <button type="button" class="btn btn-warning">Adquira já!</button>
+              <button type="button" class="btn btn-warning">Adquira já!</button>
 
             </div>
           </div>
@@ -139,31 +141,26 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga eum quidem</p>
+          <h2>Para quem é este curso</h2>
         </div>
 
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1">
             <div class="icon-box mt-5 mt-lg-0" data-aos="fade-up">
               <i class="bx bx-receipt"></i>
-              <h4>Est labore ad</h4>
-              <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+              <h4>Profissionais</h4>
+              <p>Para você que já trabalha no ramo e quer aprender direto comigo técnicas profissionais para polir e vitrificar faróis de forma simples, fácil e rápida.</p>
             </div>
             <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="100">
               <i class="bx bx-cube-alt"></i>
-              <h4>Harum esse qui</h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+              <h4>Estudantes</h4>
+              <p>Para você que quer iniciar no ramo investindo certo, aprendendo técnicas eficientes e tendo um retorno rápido, 
+                onde 70% da frota de carro atualmente encontra esse problema crônico nos faróis.</p>
             </div>
             <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="200">
               <i class="bx bx-images"></i>
-              <h4>Aut occaecati</h4>
-              <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
-            </div>
-            <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-shield"></i>
-              <h4>Beatae veritatis</h4>
-              <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+              <h4>Hobby</h4>
+              <p>Para você que gosta de cuidar do carro e quer fazer disso um negócio lucrativo.</p>
             </div>
           </div>
           <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/services.jpg");'
@@ -246,7 +243,8 @@
             <div class="content" data-aos="fade-up">
               <h3>Módulos do curso</h3>
               <p>
-                Com apenas algumas horas deste curso, você conseguirá repor todo seu investimento. Apenas 1 serviço feito e o curso será pago, rendendo lucro para seu bolso também.
+                Com apenas algumas horas deste curso, você conseguirá repor todo seu investimento. Apenas 1 serviço
+                feito e o curso será pago, rendendo lucro para seu bolso também.
               </p>
             </div>
 
@@ -676,18 +674,20 @@
     </section> -->
     <!-- End Team Section -->
 
+
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing section-bg">
+      <hr>
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Pricing</h2>
-          <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga eum quidem</p>
+          <h2>Preço</h2>
+          <p>Garanta já sua vaga</p>
         </div>
 
-        <div class="row">
+        <div class="row justify-content-center">
 
-          <div class="col-lg-4 col-md-6">
+          <!-- <div class="col-lg-4 col-md-6">
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
               <h3>Free</h3>
               <h4><sup>$</sup>0<span> / month</span></h4>
@@ -702,27 +702,25 @@
                 <a href="#" class="btn-buy">Buy Now</a>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended" data-aos="zoom-in">
-              <span class="recommended-badge">Recommended</span>
-              <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <span class="recommended-badge">Valor Único</span>
+              <h3>Garanta sua vaga por apenas</h3>
+              <h4><sup>R$</sup>99,90</h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Válido por 6 meses</li>
+                <li>Certificado</li>
+                <li>Converse direto com o professor</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Compre Agora</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+          <!-- <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
               <h3>Developer</h3>
               <h4><sup>$</sup>29<span> / month</span></h4>
@@ -739,9 +737,9 @@
             </div>
           </div>
 
-        </div>
+        </div> -->
 
-      </div>
+        </div>
     </section><!-- End Pricing Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
@@ -756,10 +754,12 @@
 
           <li data-aos="fade-up">
             <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#faq1">
-              Eu nunca trabalhei no ramo automotivo o curso é para mim? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+              Eu nunca trabalhei no ramo automotivo o curso é para mim? <i class="bx bx-chevron-down icon-show"></i><i
+                class="bx bx-x icon-close"></i></a>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Sim, eu ensino dos conceitos básicos aos mais avançados, você vai sair do 0 e se colocar tudo em pratica tem tudo para se tornar uma autoridade.
+                Sim, eu ensino dos conceitos básicos aos mais avançados, você vai sair do 0 e se colocar tudo em pratica
+                tem tudo para se tornar uma autoridade.
               </p>
             </div>
           </li>
@@ -788,11 +788,13 @@
 
           <li data-aos="fade-up" data-aos-delay="300">
             <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">
-              Eu já faço polimento esse curso também serve para mim? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
+              Eu já faço polimento esse curso também serve para mim? <i class="bx bx-chevron-down icon-show"></i><i
+                class="bx bx-x icon-close"></i></a>
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Claro que serve! Eu comecei a polir a 13 anos, e mesmo quando eu já tinha uns 2 anos de experiência no ramo, 
-                se eu fizesse esse curso seria um baita atalho para chegar onde cheguei hoje, 
+                Claro que serve! Eu comecei a polir a 13 anos, e mesmo quando eu já tinha uns 2 anos de experiência no
+                ramo,
+                se eu fizesse esse curso seria um baita atalho para chegar onde cheguei hoje,
                 além de segredos da parte pratica avançada tem muitos segredos de como se posicionar no mercado.
               </p>
             </div>
@@ -800,8 +802,7 @@
 
           <li data-aos="fade-up" data-aos-delay="400">
             <a data-bs-toggle="collapse" data-bs-target="#faq5" class="collapsed">
-              Quando recebo o curso? <i class="bx bx-chevron-down icon-show"></i><i
-                class="bx bx-x icon-close"></i></a>
+              Quando recebo o curso? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
             <div id="faq5" class="collapse" data-bs-parent=".faq-list">
               <p>
                 O curso é enviado automaticamente assim que seu pagamento for confirmado no seu e-mail de cadastro!
@@ -811,8 +812,7 @@
 
           <li data-aos="fade-up" data-aos-delay="500">
             <a data-bs-toggle="collapse" data-bs-target="#faq6" class="collapsed">
-              O curso é online? <i class="bx bx-chevron-down icon-show"></i><i
-                class="bx bx-x icon-close"></i></a>
+              O curso é online? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
             <div id="faq6" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Sim, eu acredito que essa é a melhor forma de se aprender hoje em dia, Você assiste e coloca em pratica.
@@ -820,8 +820,9 @@
               <p>
                 Você vai pode rever quantas vezes quiser, e vai ter suporte e a comunidade para tirar qualquer duvida.
               </p>
-              <p>    
-                A maioria dos cursos presenciais você faz um dia e se por acaso você não entendeu bem alguma parte , não tem a como recuperar o conteúdo.
+              <p>
+                A maioria dos cursos presenciais você faz um dia e se por acaso você não entendeu bem alguma parte , não
+                tem a como recuperar o conteúdo.
               </p>
             </div>
           </li>
@@ -925,9 +926,10 @@
         </div> -->
 
         <div class="social-links">
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://www.facebook.com/garduccidetail" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/garduccidetail" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://api.whatsapp.com/send?phone=5511994127187&text=Olá, visitei seu site e gostei do seu trabalho. Vamos bater um papo ?" 
+          class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
         </div>
 
       </div>
