Adicionado link da hotmart de compra

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                 <li><i class="bx bx-check-double"></i> Certificado após a conclusão</li>
                 <li><i class="bx bx-check-double"></i> Tire suas dúvidas diretamente com o professor</li>
               </ul>
-              <button type="button" class="btn btn-warning">Adquira já!</button>
+              <a type="button" class="btn btn-warning"
+              href="https://payment.hotmart.com/Y57574956H?off=dx8qdk5l&sck=HOTMART_PRODUCT_PAGE&checkoutMode=0&bid=1632959909433">Adquira já!</a>
 
             </div>
           </div>
