Adicionado novas imagens

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Sobre o curso</h2>
-          <p>Turma Polimento e Vitrificação de Farol Garducci Detail</p>
+          <p>Turma Revitalização de Farol Garducci Detail</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-right">
             <div class="image">
-              <img src="assets/img/about.jpg" class="img-fluid" alt="">
+              <img src="assets/img/sobre-curso.jpeg" class="img-fluid" alt="">
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-left">
@@ -81,11 +81,18 @@
               </p>
               <ul>
                 <li><i class="bx bx-check-double"></i> Curso didático</li>
+                <li><i class="bx bx-check-double"></i> Retorno imediato</li>
+                <li><i class="bx bx-check-double"></i> Fácil execução</li>
                 <li><i class="bx bx-check-double"></i> Certificado após a conclusão</li>
                 <li><i class="bx bx-check-double"></i> Tire suas dúvidas diretamente com o professor</li>
               </ul>
-              <a type="button" class="btn btn-warning"
-              href="https://payment.hotmart.com/Y57574956H?off=dx8qdk5l&sck=HOTMART_PRODUCT_PAGE&checkoutMode=0&bid=1632959909433">Adquira já!</a>
+
+              <a type="button" class="btn btn-warning" target="_blank"
+              href="https://www.hotmart.com/product/curso-de-revitalizacao-de-farol/Y57574956H">Veja o curso</a>
+
+              <a type="button" class="btn btn-warning" target="_blank"
+                href="https://payment.hotmart.com/Y57574956H?off=dx8qdk5l&sck=HOTMART_PRODUCT_PAGE&checkoutMode=0&bid=1632959909433">Adquira
+                já!</a>
 
             </div>
           </div>
@@ -150,7 +157,7 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img src="./assets/img/para-quem-curso-profissional.jpg" class="d-block w-100"
+                  <img src="./assets/img/para-quem-curso-profissional.jpeg" class="d-block w-100"
                     alt="Foto profissional lavando carro">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Profissional</h5>
@@ -187,12 +194,14 @@
             <div class="tab-content">
               <div class="tab-pane active show" id="tab-1">
                 <figure>
-                  <img src="assets/img/cuidados-farois-iluminacao.jpg" alt="cuidados-farois-iluminacao" class="img-fluid">
+                  <img src="assets/img/cuidados-farois-iluminacao.jpg" alt="cuidados-farois-iluminacao"
+                    class="img-fluid">
                 </figure>
               </div>
               <div class="tab-pane" id="tab-2">
                 <figure>
-                  <img src="assets/img/cuidados-farois-valorizacao.jpg" alt="cuidados-farois-valorizacao" class="img-fluid">
+                  <img src="assets/img/cuidados-farois-valorizacao.jpg" alt="cuidados-farois-valorizacao"
+                    class="img-fluid">
                 </figure>
               </div>
               <div class="tab-pane" id="tab-3">
@@ -282,12 +291,11 @@
 
           </div>
 
-          <div class="col-lg-5 order-1 order-lg-2 align-items-stretch video-box"
-            style='background-image: url("assets/img/why-us.jpg");' data-aos="zoom-in">
-            <a href="https://www.youtube.com/watch?v=LIqQNG_q2us" class="venobox play-btn mb-4" data-vbtype="video"
-              data-autoplay="true"></a>
+          <div class="col-lg-5 order-1 order-lg-2 align-items-stretch"
+            style='background-image: url("assets/img/perfil-erick-2.jpeg"); background-repeat: no-repeat;'>
+            <!-- <a class="venobox play-btn mb-4" data-vbtype="video"
+              data-autoplay="true"></a> -->
           </div>
-
         </div>
 
       </div>
