--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="row">
           <div class="col-lg-6" data-aos="fade-right">
             <div class="image">
-              <img src="assets/img/about.jpg" class="img-fluid" alt="">
+              <img src="assets/img/sobre-curso.jpeg" class="img-fluid" alt="">
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-left">
@@ -139,21 +139,21 @@
                   <img src="./assets/img/para-quem-curso-iniciante.jpg" class="d-block w-100"
                     alt="Foto iniciante lavando carro">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Iniciante</h5>
+                    <!-- <h5>Iniciante</h5> -->
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="./assets/img/para-quem-curso-intermediario.jpg" class="d-block w-100"
                     alt="Foto Intermediário lavando carro">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Intermediário</h5>
+                    <!-- <h5>Intermediário</h5> -->
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="./assets/img/para-quem-curso-profissional.jpg" class="d-block w-100"
                     alt="Foto profissional lavando carro">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Profissional</h5>
+                    <!-- <h5>Profissional</h5> -->
                   </div>
                 </div>
               </div>
@@ -282,10 +282,8 @@
 
           </div>
 
-          <div class="col-lg-5 order-1 order-lg-2 align-items-stretch video-box"
-            style='background-image: url("assets/img/why-us.jpg");' data-aos="zoom-in">
-            <a href="https://www.youtube.com/watch?v=LIqQNG_q2us" class="venobox play-btn mb-4" data-vbtype="video"
-              data-autoplay="true"></a>
+          <div class="col-lg-5 order-1 order-lg-2 align-items-stretch">
+            <img src="assets/img/perfil-erick-2.jpeg" alt="imagem-de-perfil-do-curso" id="img_perfil_curso">
           </div>
 
         </div>
